--- a/berikutnya.html
+++ b/berikutnya.html
@@ -25,7 +25,7 @@ https://www.tooplate.com/view/2122-nano-folio
 			</div>
 			<div class="tm-about-text">
 				<p class="tm-mb-40">Jika kamu sudah berada pada halaman ini, artinya kamu sudah membaca tulisan-tulisan sebelumnya. Terimakasih sudah mau membaca semua tulisan yang tadi dan bertahan sampai ke halaman ini.</p>
-				<p class="tm-mb-0">Untuk nomor Whatsapp saya, maaf maksud saya ada di halaman selanjutnya lagi :) . Klik tulisan disamping untuk beralih ke halaman terakhir : <a rel="nofollow" href="terakhirr.html">halaman terakhir</a>.
+				<p class="tm-mb-0">Untuk nomor Whatsapp saya, maaf maksud saya ada di halaman selanjutnya lagi :) . Klik tulisan berikut untuk beralih ke halaman terakhir : <a rel="nofollow" href="terakhirr.html"><b>halaman terakhir</b></a>.
 			</div>
 		</section>
 
