--- a/terakhirr.html
+++ b/terakhirr.html
@@ -89,6 +89,7 @@
                             </div><!-- End of single_home_slider -->
 
                             <div class="single_home_slider">
+                                <p class="subtitle">geser kekiri atau kekanan lagi.</p>
                             </div><!-- End of single_home_slider -->
 
                         </div>
