--- a/terakhirr.html
+++ b/terakhirr.html
@@ -89,6 +89,8 @@
                             </div><!-- End of single_home_slider -->
 
                             <div class="single_home_slider">
+                                <div class="home-overlay"></div>
+                                <div class="main_home wow fadeInUp" data-wow-duration="700ms"> 
                                 <p class="subtitle">geser kekiri atau kekanan lagi.</p>
                             </div><!-- End of single_home_slider -->
 
