--- a/ucapan.html
+++ b/ucapan.html
@@ -85,7 +85,7 @@
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Sebelumnya perkenalkan, saya Rama. Insyaallah kamu sudah tau saya siapa. <b>Mbak Niah cukup banyak bercerita tentang kamu</b> saat kerja ditempat orangtua saya. Saya kagum dengan kamu dari cerita cerita itu. <b>Saya tertarik untuk mengenal kamu</b> lebih jauh lagi. <b>Jika kamu berkenan</b>, saya akan sangat senang dan terbuka untuk melanjutkan komunikasi tentang perkenalan ini lewat <b>pesan Whatsapp</b>. Nomor Whatsapp saya akan ada pada halaman berikutnya.
+                Sebelumnya perkenalkan, saya Rama. Insyaallah kamu sudah tau saya siapa. <b>Mbak Niah cukup banyak bercerita tentang kamu</b> saat kerja ditempat orangtua saya. Saya kagum dengan kamu dari cerita cerita itu. <b>Saya tertarik untuk mengenal kamu</b>. <b>Jika kamu berkenan</b>, saya akan sangat senang dan terbuka untuk melanjutkan komunikasi tentang ini lewat <b>pesan Whatsapp</b>. Nomor Whatsapp saya akan ada pada halaman berikutnya.
               </p>
             </div>
           </div>
