--- a/terakhirr.html
+++ b/terakhirr.html
@@ -79,11 +79,11 @@
                                     <h2>terimakasih.</h2>
                                     <div class="separator"></div>
                                     <p class="subtitle">sudah membaca <br />
-                                        semua tulisan ini dan semoga senang dengan hadiah ini. Yang semangat dan giat belajarnya, semoga mendapat hasil yang terbaik. <br>
-                                    Jika kamu berkenan untuk melanjutkan komunikasi kita tentang perkenalan ini, silahkan Whatsapp saya dan ketik tulisan <b>"Assalamualaikum"</b>. Tapi jika belum berkenan atau ada hati yang mungkin sedang kamu jaga, silahkan Whatsapp saya dan ketik tulisan <b>"Alhamdulillah"</b>.</p>
+                                        semua tulisan ini dan semoga senang dengan hadiah ini. Saya berharap, tak cuma keluarga dan kerabat yang jadi penyemangatmu, tapi juga sekarang ada boneka ini yang semoga bisa membuat kamu lebih semangat lagi belajar untuk ujian kelulusan. Boneka ini punya simbol dan arti yaitu, baju kelulusan yang bermakna kesuksesan dan boneka ini mengenakan kacamata yang bermakna kecerdasan, insyaallah. Juga ada coklat dalam hadiah ini. Katanya coklat bisa bikin bahagia dan mood naik, semoga coklat ini bisa membuat kamu merasakan hal itu.<br>
+                                    Jika kamu berkenan untuk melanjutkan komunikasi kita tentang perkenalan ini, saya terbuka untuk saling berbalas pesan lewat Whatsapp saya dan jangan lupa ketik <b>"Assalamualaikum"</b> sebagai pembuka :) . Tapi jika belum berkenan atau ada hati yang mungkin sedang kamu jaga, silahkan Whatsapp saya dan ketik tulisan <b>"Alhamdulillah"</b> atau abaikan saja semua ini tak apa, yang terpenting semoga senang dengan hadiahnya.</p>
                                     <div class="home_btn">
                                         <a href="https://api.whatsapp.com/send?phone=6281806381188" class="btn">Whatsapp saya.</a>
-                                        <br><BR><p style="color: black;">Maaf kalau bahasanya terlalu formal ya, biar seru aja, asli nya gk gini kok :D</p>
+                                        <br><BR><p style="color: black;">Maaf kalau hadiah nya duluan ya dan maaf juga kalau bahasanya terlalu formal, biar seru aja, asli nya gk gini kok :D</p>
                                     </div>
                                 </div>
                             </div><!-- End of single_home_slider -->
